# jp1-libraries

./: .gitignore  .gitmodules  README.md
decodeir/: DecodeIR.cpp  DecodeIR.dsp  DecodeIR.h  DecodeIR.vcproj  Makefile.Linux  Makefile.MacOSX  Makefile.am  README  configure.ac  pom.xml
decodeir/src/: DecodeIR.cpp  DecodeIR.h
decodeir/src/main/java/com/hifiremote/decodeir/: DecodeIRCaller.java
jp12serial/: Makefile.Linux  Makefile.MacOSX  Makefile.rpi  ReadMe.txt  ftdi.cpp  ftdi.h  jp12serial.cpp  jp12serial.hpp
jp12serial/Source/: Makefile.Linux  Makefile.MacOSX  Makefile.rpi  StdAfx.h  com_hifiremote_jp1_io_JP12Serial.h  jp12serial.cpp
jp12serial/src/: StdAfx.h  ftdi.cpp  ftdi.h  jp12serial.cpp  jp12serial.hpp
jp1arduino/: JP1_Arduino.ino  Makefile  README.md
scripts/: javaenv.sh  mkdir_p.sh
